Removed a deprecated usage  of new URL(...)